# rust-chat-server

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
client/: package-lock.json  package.json
server/: Cargo.toml  TODO.md
server/migrations/2023-10-27-192404_create_initial_tables/: down.sql  up.sql
server/migrations/2023-11-17-192644_create_default_channels/: down.sql  up.sql
server/scripts/: get.sh  post.sh
server/src/: db.rs  main.rs  models.rs  schema.rs
server/src/db/: models.rs  schema.rs
server/src/models/: mod.rs  room.rs  user.rs  user_room_permission.rs
server/src/rooms/: mod.rs
server/src/users/: mod.rs
server/static/: 404.html  index.html
